--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,84 +1,117 @@
-.bg {
-  position: absolute;
-  z-index: -1;
-  background-image: url("https://www.simply-being-spiritual.com/wp-content/uploads/2014/02/Beautiful-Journey-Wallpaper-HD-Widescreen-1024x640.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  font-family: "Lexend Peta";
-  filter: blur(8px);
-  background-position: center;
+@font-face {
+  font-family: 'Raleway', sans-serif;
+  src: url();
 }
+
+* {
+  font-family: Raleway;
+  color: #B4CDED;
+}
+
 body {
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 100vw;
   height: 100vh;
   margin: 0;
-  font-family: "Varela Round";
-  background-position: center;
-  position: relative;
+  background-color: #0D1821;
 }
-.module {
-  width: 100%;
-  /*   filter: blur(8px); */
-  background-color: rgba(0, 0, 0, 0.1);
-  /*   -webkit-filter: blur(8px); */
-  height: 100%;
-  display: flex;
+
+#general-container {
+  display: grid;
+  grid-template-areas: "header" "login-form";
+  grid-template-columns: auto;
+  grid-template-rows: 10vh 90vh;
+  justify-items: center;
+  margin: auto;
+}
+
+#header-container {
+  grid-area: header;
+  width: 100vw;
+  background-color: #344966;
+}
+
+#header-container header {
+  display: grid;
+  grid-template-columns: 7vh auto;
+  column-gap: 10px;
   align-items: center;
-  justify-content: center;
+  width: fit-content;
+  margin: 1.5vh auto;
 }
-.card {
-  background-color: rgba(85, 75, 75, 0.5);
-  width: 400px;
-  height: 450px;
-  border-radius: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+
+#header-container #logo {
+  height: 7vh;
 }
-input {
-  background-color: rgba(0, 0, 0, 0);
-  box-shadow: 0;
-  border: 0;
-  border-bottom: 1px #b5b5b5 solid;
-  width: 100%;
-  font-size: 18px;
-  padding: 5px;
-  color: rgba(0, 0, 0, 0.4);
-  font-family: "Varela Round";
+
+#header-container h1 {
+  width: fit-content;
+  margin: auto;
+  font-size: 40pt;
+  color: #ff575a !important;
 }
-input::placeholder {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: 16px;
-  letter-spacing: 2px;
-  font-family: "Varela Round";
+
+#signupForm {
+  display: grid;
+  grid-area: login-form;
+  grid-template-columns: auto;
+  column-gap: 20px;
+  row-gap: 10px;
+  width: 35vw;
+  height: fit-content;
+  margin-top: 30px;
+  padding: 20px;
 }
-.input-group {
-  width: 70%;
-  margin: 10px 0;
+
+#signupForm label {
+  align-self: center;
+  font-size: 13pt;
+  font-weight: 300;
 }
-.title {
-  font-size: 40px;
-  font-family: "Lobster";
-  color: #1fd086;
-  margin-bottom: 20px;
+
+#signupForm input {
+  padding: 16px;
+  border: 3px solid #344966;
+  border-radius: 7px;
+  color: #B4CDED;
+  background-color: #0D1821;
 }
-a.submit {
-  margin: 0 auto;
-  border-radius: 25px;
-  border: 0;
-  background-color: #1fd086;
-  color: white;
-  padding: 10px 30px;
-  font-size: 16px;
-  margin-top: 60px;
-  cursor: pointer;
+
+#signupForm [type="button"] {
+  padding: 8px 10px;
+  border: 3px solid #ff575a;
+  border-radius: 40px;
+  font-size: 15pt;
+  font-weight: 500;
+  color: #f0f4ef;
+  background-color: #ff575a;
 }
-a.submit:hover {
-  background-color: #4caf50;
+
+#signupForm #login {
+  padding: 12px 18px;
+  border: 3px solid #344966;
+  font-size: 13pt;
+  font-weight: 500;
+  color: #f0f4ef;
+  background-color: #0D1821;
+}
+
+#signupForm .input {
+  display: grid;
+  row-gap: 6px;
+}
+
+#signupForm .input-name {
+  display: grid;
+  grid-template-columns: auto auto;
+  column-gap: 20px;
+}
+
+#signupForm .input-text {
+  font-size: 13pt;
+  font-weight: 600;
+}
+
+#signupForm #login-row {
+  display: grid;
+  grid-template-columns: 70% 30%;
 }
