--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -9,10 +9,9 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   background-color: #0D1821;
+  overflow-x: hidden;
 }
 
 #general-container {
@@ -63,20 +62,6 @@ body {
   padding: 20px;
 }
 
-#signupForm label {
-  align-self: center;
-  font-size: 13pt;
-  font-weight: 300;
-}
-
-#signupForm input {
-  padding: 16px;
-  border: 3px solid #344966;
-  border-radius: 7px;
-  color: #B4CDED;
-  background-color: #0D1821;
-}
-
 #signupForm [type="button"] {
   padding: 8px 10px;
   border: 3px solid #ff575a;
@@ -87,29 +72,49 @@ body {
   background-color: #ff575a;
 }
 
-#signupForm #login {
-  padding: 12px 18px;
+#signupForm [type="text"],
+[type="email"] {
+  padding: 16px;
   border: 3px solid #344966;
-  font-size: 13pt;
-  font-weight: 500;
-  color: #f0f4ef;
+  border-radius: 7px;
+  color: #B4CDED;
   background-color: #0D1821;
+  font-size: 13pt;
+  font-weight: 600;
 }
 
 #signupForm .input {
   display: grid;
+  width: inherit;
   row-gap: 6px;
 }
 
 #signupForm .input-name {
   display: grid;
-  grid-template-columns: auto auto;
-  column-gap: 20px;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
+  width: inherit;
 }
 
-#signupForm .input-text {
+#signupForm .input-name .input {
+  width: 70%;
+}
+
+#signupForm .input-name .input input {
+  width: 100%;
+}
+
+#signupForm label {
+  align-self: center;
   font-size: 13pt;
-  font-weight: 600;
+  font-weight: 300;
+}
+
+#signupForm #login {
+  border: 3px solid #344966;
+  font-weight: 500;
+  color: #f0f4ef;
+  background-color: #0D1821;
 }
 
 #signupForm #login-row {
@@ -117,35 +122,35 @@ body {
   grid-template-columns: 70% 30%;
 }
 
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: auto;
-  width: 100vw;
-  padding: 20px 0;
-  color: white;
-  text-align: center;
-  background-color: #696969;
-}
-
-.links {
-  margin: 16px 0 48px 0;
-  align-items: center;
-  justify-content: center;
-  list-style: none;
-}
-
-.links li {
-  margin: 0 10px;
-}
-
-.links a {
-  text-decoration: none;
-  color: white;
-}
-
-.links a:hover {
-  color: orange;
+@media only screen and (max-width: 768px) {
+  * {
+    font-size: 16pt;
+  }
+  #header-container header {
+    display: grid;
+    grid-template-columns: 7vh auto;
+    column-gap: 10px;
+    align-items: center;
+    margin: 1.5vh auto;
+  }
+  #signupForm {
+    width: 60vw;
+  }
+  #signupForm [type="button"] {
+    padding: 12px 18px;
+    border: 3px solid #ff575a;
+    border-radius: 40px;
+    font-size: 20pt;
+    font-weight: 600;
+    color: #f0f4ef;
+    background-color: #ff575a;
+  }
+  #signupForm [type="text"],
+  [type="email"] {
+    font-size: 20pt;
+    font-weight: 600;
+  }
+  #signupForm label {
+    font-size: 16pt;
+  }
 }
