--- a/public/templates/footer_template.html
+++ b/public/templates/footer_template.html
@@ -22,23 +22,23 @@
     background-color: #696969;
   }
   
-  .links {
+  footer .links {
     margin: 16px 0 48px 0;
     align-items: center;
     justify-content: center;
     list-style: none;
   }
   
-  .links li {
+  footer .links li {
     margin: 0 10px;
   }
   
-  .links a {
+  footer .links a {
     text-decoration: none;
     color: white;
   }
   
-  .links a:hover {
+  footer .links a:hover {
     color: orange;
   }
 </style>
