--- a/public/css/admindashboard.css
+++ b/public/css/admindashboard.css
@@ -4,6 +4,13 @@
   grid-template-rows: 1;
 }
 
+#userForm{
+  background-color: antiquewhite;
+  border: solid;
+  border-color: black;
+  text-align: center;
+}
+
 .users {
   border: solid;
   border-color: black;
