Fixed bug which allowed users to be registered with empty data Added constraints to sign up form's personality and age fields Minor css changes (Added cursor: pointer on buttons)

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -71,6 +71,7 @@ body {
   font-weight: 600;
   color: #f0f4ef;
   background-color: #ff575a;
+  cursor: pointer;
 }
 
 #loginForm [type="email"],
@@ -94,6 +95,7 @@ body {
   border: 3px solid #344966;
   font-weight: 500;
   background-color: #0D1821;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 768px) {
@@ -111,6 +113,7 @@ body {
     font-weight: 600;
     color: #f0f4ef;
     background-color: #ff575a;
+    cursor: pointer;
   }
   #loginForm [type="email"],
   [type="password"] {
