--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -70,10 +70,21 @@ body {
   font-weight: 500;
   color: #f0f4ef;
   background-color: #ff575a;
+  cursor: pointer;
 }
 
 #signupForm [type="text"],
-[type="email"] {
+[type="email"], [type="number"] {
+  padding: 16px;
+  border: 3px solid #344966;
+  border-radius: 7px;
+  color: #B4CDED;
+  background-color: #0D1821;
+  font-size: 13pt;
+  font-weight: 600;
+}
+
+#mbti{
   padding: 16px;
   border: 3px solid #344966;
   border-radius: 7px;
@@ -115,6 +126,7 @@ body {
   font-weight: 500;
   color: #f0f4ef;
   background-color: #0D1821;
+  cursor: pointer;
 }
 
 #signupForm #login-row {
