--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,17 +12,65 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background-color: #0D1821;
+  background-color: #B4CDED;
 }
 
 #general-container {
   display: grid;
-  grid-template-areas: "header" "login-form";
-  grid-template-columns: auto;
-  grid-template-rows: 10vh 90vh;
+  height: 100vh;
+  width: 100vw;
+  grid-template-areas: "left-bar main right-bar";
+  grid-template-columns: 15% 75% 10%;
   justify-items: center;
   margin: auto;
 }
+
+#left-bar {
+  display: grid;
+  grid-template-rows: 5% 20% 3% auto auto 5% 5%;
+  row-gap: 2vh;
+  justify-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #0D1821;
+}
+
+#left-bar #logo {
+  display: grid;
+  justify-items: center;
+}
+
+#left-bar #logo img {
+  width: 50%;
+}
+
+#left-bar #menu {
+  display: grid;
+  grid-template-rows: repeat(7, 1fr);
+}
+
+#left-bar #menu a {
+  display: grid;
+  grid-template-columns: 40px auto;
+}
+
+#left-bar #menu a i {
+  font-size: 17pt;
+}
+
+#left-bar #menu a p {
+  margin: 0;
+}
+
+#left-bar a {
+  text-decoration: none;
+}
+
+a [href="/logout"] {
+  text-decoration: none;
+}
+
+#main {}
 
 #header-container {
   grid-area: header;
@@ -48,33 +96,4 @@ body {
   margin: auto;
   font-size: 40pt;
   color: #ff575a !important;
-}
-
-#loginForm {
-  grid-area: login-form;
-  width: fit-content;
-  height: fit-content;
-  margin-top: 60px;
-  padding: 20px;
-}
-
-#loginForm #email {
-  width: fit-content;
-}
-
-#loginForm #password {
-  width: fit-content;
-}
-
-#loginForm input {
-  padding: 20px;
-  border: 3px solid #344966;
-  border-radius: 7px;
-  color: #B4CDED;
-  background-color: #0D1821;
-}
-
-#loginForm .input-text {
-  font-size: 13pt;
-  font-weight: 600;
 }
