--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -126,3 +126,15 @@
     top: 0;
     opacity: 0;
   }
+
+  @media screen and (max-width: 600px){
+    body{
+      align-items: center;
+      justify-content: center;
+    }
+
+    form{
+      align-items: center;
+      justify-content: center;
+    }
+  }
