Initial Commit on David_Song_Info_Page. Modified songinfo.html. Fixed web_page_template.html to redirect to profile page correctly.

--- a/public/templates/web_page_template.html
+++ b/public/templates/web_page_template.html
@@ -36,7 +36,7 @@
           <i class="fa-solid fa-book"></i>
           <p>Library</p>
         </a>
-        <a href="/profile">
+        <a href="/userprofile">
           <i class="fa-solid fa-user"></i>
           <p>Profile</p>
         </a>
