--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -120,11 +120,12 @@
   }
   
   .upload-btn-wrapper input[type=file] {
-    font-size: 100px;
+    /* font-size: 100px;
     position: absolute;
     left: 0;
     top: 0;
-    opacity: 0;
+    opacity: 0; */
+    display: none;
   }
 
   @media screen and (max-width: 600px){
