--- a/public/css/admindashboard.css
+++ b/public/css/admindashboard.css
@@ -149,18 +149,4 @@ h3 {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
-  #dashboard {
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 2;
-  }
-  #admins {
-    grid-column: 1;
-    grid-row: 1;
-  }
-  #regular {
-    grid-column: 1;
-    grid-row: 2;
-  }
-}
+@media only screen and (max-width: 1080px) {}
