Top Nav bar is fixed

--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -25,7 +25,6 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 #header-container {
@@ -53,6 +52,7 @@ body {
   font-size: 40pt;
   color: #ff575a !important;
 }
+
 
 /* #general-container {
     display: grid;
@@ -110,15 +110,12 @@ body {
   font-weight: 600;
 }
 
-
-
 .upload-btn-wrapper {
   position: relative;
   overflow: hidden;
   display: grid;
   justify-content: center;
   align-items: center;
-
 }
 
 .btn {
@@ -138,8 +135,6 @@ body {
   top: 0;
   opacity: 0;
 }
-
-
 
 #left-bar {
   display: grid;
@@ -186,31 +181,84 @@ a [href="/logout"] {
   text-decoration: none;
 }
 
-
-.topnav {
+#topnav {
   display: none;
 }
 
-
-
 @media screen and (max-width: 1200px) {
-
   #general-container {
     display: grid;
     height: inherit;
     width: inherit;
-    grid-template-areas: "header""login-form";
-    grid-template-columns: auto;
-    grid-template-rows: 10vh auto auto;
-    justify-items: center;
     margin: auto;
+    grid-template-areas: "top-nav" "main";
+    grid-template-columns: auto;
+    grid-template-rows: 10vh auto;
+    justify-items: center;
+    overflow-x: hidden;
   }
-
-  body {
+  #topnav {
+    display: grid;
+    grid-template-areas: "top-logo ." "top-menu top-menu";
+    grid-template-columns: 30% 70%;
+    grid-area: top-nav;
+    width: 100%;
+    position: relative;
+    background-color: #0D1821;
+  }
+  #topnav #top-menu {
+    display: none;
+    padding: 20px 0;
+    z-index: 1;
+    grid-area: top-menu;
+    row-gap: 20px;
+    background-color: #0D1821;
+  }
+  #topnav #top-menu a {
+    padding-left: 10px;
+    text-decoration: none;
+    font-size: 17pt;
+  }
+  #topnav #top-logo {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-area: top-logo;
+    justify-items: center;
     align-items: center;
-
+    text-decoration: none;
+    font-size: 17px;
+    color: #B4CDED;
   }
-
+  #topnav img {
+    height: 7vh;
+  }
+  #topnav h1 {
+    margin: 0;
+  }
+  #topnav #hamburger {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 20pt;
+  }
+  #topnav #hamburger:hover {
+    cursor: pointer;
+    background-color: #0D1821;
+    color: #B4CDED;
+  }
+  .active {
+    background-color: #0D1821;
+    color: #B4CDED;
+  }
+  #left-bar {
+    display: none;
+  }
+  #main {
+    z-index: 0;
+  }
+  #right-bar {
+    display: none;
+  }
   .btn {
     border: 3px solid #ff575a;
     color: #f0f4ef;
@@ -220,7 +268,6 @@ a [href="/logout"] {
     font-size: 13pt;
     font-weight: 600;
   }
-
   .info [type="button"],
   [type="submit"] {
     padding: 12px 18px;
@@ -232,77 +279,11 @@ a [href="/logout"] {
     background-color: #ff575a;
     cursor: pointer;
   }
-
   .upload-btn-wrapper input[type=file] {
-
     display: none;
   }
-
   form {
     align-items: center;
     justify-content: center;
   }
-
-  #left-bar {
-    display: none;
-  }
-
-  .topnav {
-    display: block;
-  }
-
-  .topnav {
-    overflow: hidden;
-    background-color: #0D1821;
-    position: relative;
-    padding-left: 10px;
-  }
-
-  .topnav #myLinks {
-    display: none;
-  }
-
-  .topnav a {
-    color: #B4CDED;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-  }
-
-  .topnav a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding-left: 10px;
-  }
-
-  .topnav a:hover {
-    background-color: #0D1821;
-    color: #B4CDED;
-  }
-
-  .active {
-    background-color: #0D1821;
-    color: #B4CDED;
-  }
-
-  .img {
-    position: relative;
-    float: left;
-    width: 50px;
-    height: 50px;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-right: 10px;
-  }
-
-  .h1 {
-    padding-top: 5px;
-  }
-
-
 }
