--- a/public/css/songinfo.css
+++ b/public/css/songinfo.css
@@ -97,3 +97,18 @@ a [href="/logout"] {
   width: 20%;
   border-radius: 5px;
 }
+
+/* Style buttons */
+.btn {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
