Added js to display, edit and delete reviews from the profile page Added js to delete reviews from the song info page Changed the format of dateOfReview from DATE to DATETIME in review table Made some minor css adjustments for testing in profile page

--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -191,7 +191,9 @@ a [href="/logout"] {
   display: none;
 }
 
-
+#userReviews, #errorMsg{
+  background-color: #0D1821;
+}
 
 @media screen and (max-width: 1200px) {
 
