Added userprofile's timeline functionalities to the main page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -199,6 +199,10 @@ main #timeline #post-container .post .comment p {
   color: #B4CDED;
 }
 
+.material-symbols-outlined, #review-container, #postForm{ /*To test if everything is there*/
+  background-color: #0D1821;
+}
+
 @media screen and (max-width: 1200px) {
   #general-container {
     display: grid;
